horoscope-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: horoscope-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: site.horoscope
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: horoscope-zodiac-js-service
            port:
              number: 80
